# archipel-ipbeacon

./: Cargo.toml  README.md  archipel-ipbeacon.service  install-linked.sh  install.sh
doc/: 0-protocol-specs.md  A1-network.md  A2-services-tags.md  Ex-1.cbor  Ex-2.cbor  network.txt  services-tags.txt
package/: postrm  prerm
src/: create-beacon.rs  main.rs  parse-beacon.rs
src/beacon/: deserializer.rs  flags.rs  mod.rs  serializer.rs
src/discovery/: announcer.rs  mod.rs  receiver.rs
