[package]
name = "archipel-ipbeacon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.23", features=["derive"]}
ctrlc = "3.4.0"
serde = "1.0.183"
serde_cbor = "0.11.2"
ud3tn-aap = {git = "https://github.com/archipel-network/rust-ud3tn.git"}

[[bin]]
name = "create-beacon"
path = "src/create-beacon.rs"

[[bin]]
name = "parse-beacon"
path = "src/parse-beacon.rs"

[[bin]]
name = "daemon"
path = "src/main.rs"
