[package]
name = "archipel-ipbeacon"
version = "0.1.0"
edition = "2021"
description = "Archipel neighbour discovery"
authors = ["EpicKiwi <me@epickiwi.fr>"]

[dependencies]
clap = { version = "4.3.23", features=["derive"]}
ctrlc = "3.4.0"
serde = "1.0.183"
serde_cbor = "0.11.2"
ud3tn-aap = {git = "https://github.com/archipel-network/rust-ud3tn.git"}

[[bin]]
name = "create-beacon"
path = "src/create-beacon.rs"

[[bin]]
name = "parse-beacon"
path = "src/parse-beacon.rs"

[[bin]]
name = "daemon"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "EpicKiwi <me@epickiwi.fr>"
license-file = ["LICENSE", "0"]
depends = ["$auto", "archipel-core"]
section = "net"
priority = "optional"
maintainer-scripts = "package"
assets = [
    ["target/release/daemon", "usr/bin/archipel-ipbeacon", "755"],
    ["archipel-ipbeacon.service", "usr/lib/systemd/system/archipel-ipbeacon.service", "444"],
]